services/python-staticjs-furever-home/static-frontend/openshift/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: furever-home
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: furever-home
    component: deployment
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"backend"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: furever-home-frontend
  template:
    metadata:
      labels:
        app: furever-home-frontend
    spec:
      containers:
      - name: furever-home-frontend
        imagePullPolicy: Always
        image: quay.io/kenmoini/furever-home-frontend:latest
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: overrides
            mountPath: "/var/www/html/assets/js/container/"
            readOnly: true
      volumes:
        - name: overrides
          configMap:
            name: furever-home-frontend-js-overrides
            items:
              - key: "overrides.js"
                path: "overrides.js"
              - key: "functions.js"
                path: "functions.js"
              - key: "keycloak-shared.js"
                path: "keycloak-shared.js"
